# rechnungs_tracker

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.dev.yml  docker-compose.phase0.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/parser/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/parser/app/: config.py  main.py
apps/parser/app/routers/: health.py  parse.py
apps/parser/app/schemas/: parse_request.py  parse_response.py
apps/parser/app/services/: confidence.py  invoice_parser.py  ocr_extractor.py  text_extractor.py
apps/parser/tests/: conftest.py  test_confidence.py  test_health.py  test_invoice_parser.py  test_parse.py  test_text_extractor.py
apps/web/: Dockerfile  entrypoint.sh  package.json  vitest.config.ts
apps/web/prisma/: schema.prisma  seed.ts
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx
apps/web/src/components/: invoice-filters.tsx  invoice-items.tsx  pdf-viewer.tsx  review-actions.tsx  review-history.tsx  status-badge.tsx  supplier-select.tsx  upload-dropzone.tsx  user-form.tsx
apps/web/src/hooks/: use-polling.ts
apps/web/src/lib/: auth-helpers.ts  auth.ts  constants.ts  csv-export.ts  file-storage.ts  queue.ts
apps/web/src/types/: next-auth.d.ts
apps/web/src/worker/: index.ts  process-invoice.ts
apps/web/tests/api/: admin-users.test.ts  auth.test.ts  export-csv.test.ts  invoices-detail.test.ts  invoices-list.test.ts  invoices-pdf.test.ts  review.test.ts  status.test.ts  (+2 more)
docs/: API.md  DECISIONS.md  DEPLOYMENT.md  DOMAIN.md  TESTING.md
(+37 files in other folders)
