[project]
name = "rechnungtracker-parser"
version = "0.1.0"
description = "PDF invoice parser service with pdfplumber and Tesseract OCR"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",
    "pdf2image>=1.17.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "reportlab>=4.2.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests requiring Tesseract OCR (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
